add sendMail http endpoint
